Create project components and service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,1 @@
-<div class="bg-white dark:bg-dark-blue">
-  <h1 class="text-gray-900 dark:text-white">Hello World</h1>
-</div>
+<router-outlet></router-outlet>
