--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+// Tailwind Configuration
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+// Global Styles
+body {
+  font-family: "Nunito Sans", sans-serif;
+}
