--- a/src/countries-home/country-single/country-single.component.html
+++ b/src/countries-home/country-single/country-single.component.html
@@ -1,1 +1,86 @@
-<p>country-single works!</p>
+<main
+  class="h-screen bg-light dark:bg-very-dark-blue-dark flex flex-col justify-start items-center pb-4"
+>
+  <header
+    class="w-full flex justify-around md:justify-between gap-8 py-8 bg-white dark:bg-dark-blue mb-6 md:px-12 Llaptop:px-2"
+  >
+    <h1 class="font-bold text-base dark:text-white">Where in the world?</h1>
+    <button (click)="toggleDark()" class="font-light text-sm dark:text-white">
+      <i class="fa-solid fa-moon pr-2"></i>Dark Mode
+    </button>
+  </header>
+  <div class="w-90vw xs:w-2/3 md:w-90vw">
+    <button
+      class="py-2 px-8 shadow-md text-slate-700 dark:text-white dark:bg-dark-blue rounded-sm text-sm"
+      routerLink=""
+    >
+      <i class="fa-solid fa-arrow-left pr-2"></i>Back
+    </button>
+  </div>
+  @if (country) {
+  <section
+    class="dark:text-white text-sm mt-4 w-90vw flex flex-col gap-2 xs:w-2/3 md:grid md:grid-cols-2 md:w-90vw"
+  >
+    <div class="md:mt-10">
+      <img
+        [src]="country.flags.png"
+        alt="Flag of {{ country.name }}"
+        class="h-40 w-full md:h-72 md:w-full"
+      />
+    </div>
+    <div
+      class="flex flex-col gap-2 md:pl-10 lg:grid lg:grid-cols-2 lg:grid-rows-2 lg:mt-10"
+    >
+      <div class="flex flex-col gap-2">
+        <h2 class="font-extrabold text-xl my-4">{{ country.name }}</h2>
+        <p class="font-bold">
+          Native Name:
+          <span class="font-extralight">{{ country.nativeName }}</span>
+        </p>
+        <p class="font-bold">
+          Population:
+          <span class="font-extralight">{{ country.population }}</span>
+        </p>
+        <p class="font-bold">
+          Region: <span class="font-extralight">{{ country.region }}</span>
+        </p>
+        <p class="font-bold">
+          Sub Region:
+          <span class="font-extralight">{{ country.subregion }}</span>
+        </p>
+        <p class="font-bold">
+          Capital: <span class="font-extralight">{{ country.capital }}</span>
+        </p>
+      </div>
+      <div class="flex flex-col gap-2 lg:justify-center">
+        <p class="font-bold mt-4">
+          Top Level Domain:
+          <span class="font-extralight">{{ country.topLevelDomain }}</span>
+        </p>
+        <ul class="flex gap-1">
+          @for (currency of country.currencies; track $index) {
+          <li class="font-bold">Currencies:</li>
+          <li class="font-extralight">{{ currency.code }},</li>
+          }
+        </ul>
+        <ul class="flex gap-1">
+          <li class="font-bold">Laguages:</li>
+          @for (language of country.languages; track $index) {
+          <li class="font-extralight">{{ language.name }},</li>
+          }
+        </ul>
+      </div>
+      <div class="lg:col-span-2 lg:mt-8">
+        <p class="font-bold">Border Countries:</p>
+        <ul class="flex justify-evenly flex-wrap gap-1">
+          @for (border of country.borders; track $index) {
+          <li class="py-1 px-4 shadow-md text-xs">
+            {{ border }}
+          </li>
+          }
+        </ul>
+      </div>
+    </div>
+  </section>
+  }
+</main>
