--- a/src/countries-home/countries-home.component.html
+++ b/src/countries-home/countries-home.component.html
@@ -22,6 +22,8 @@
           name="countrySearch"
           placeholder="Search for a country..."
           class="py-3 w-full mx-auto pl-8 rounded-md dark:bg-dark-blue focus:outline-0 md:w-96 placeholder-gray-500 dark:placeholder-gray-300 text-sm"
+          [(ngModel)]="searchTerm"
+          (keyup.enter)="searchCountry()"
         />
       </div>
     </form>
@@ -29,25 +31,53 @@
       class="w-max pl-4 md:absolute md:-top-3 md:right-14 Llaptop:right-24 2xl:right-36"
     >
       <div
-        class="flex justify-between items-center w-40 gap-4 py-3 px-3 text-xs mt-4 bg-white dark:bg-dark-blue dark:text-white rounded-md shadow-sm"
+        class="flex justify-between items-center w-40 gap-4 py-3 px-3 text-xs mt-4 bg-white dark:bg-dark-blue dark:text-white rounded-md shadow-sm hover:cursor-pointer"
+        (click)="showRegions = !showRegions"
       >
         <p class="text-gray-500 dark:text-gray-300">Filter by Region</p>
         <i class="fas fa-angle-down text-xs"></i>
       </div>
+      @if (showRegions) {
       <ul
-        class="bg-white w-40 px-4 py-2 dark:bg-dark-blue dark:text-white rounded-md mt-1 flex-col gap-1 absolute hidden"
+        class="bg-white text-slate-700 w-40 px-4 py-2 dark:bg-dark-blue dark:text-white rounded-md mt-1 flex flex-col gap-2 absolute hover:cursor-pointer"
       >
-        <li class="text-xs">Africa</li>
-        <li class="text-xs">Americas</li>
-        <li class="text-xs">Asia</li>
-        <li class="text-xs">Europe</li>
-        <li class="text-xs">Oceania</li>
+        <li
+          class="text-xs hover:scale-105"
+          (click)="filterCountriesByRegion('Africa')"
+        >
+          Africa
+        </li>
+        <li
+          class="text-xs hover:scale-105"
+          (click)="filterCountriesByRegion('Americas')"
+        >
+          Americas
+        </li>
+        <li
+          class="text-xs hover:scale-105"
+          (click)="filterCountriesByRegion('Asia')"
+        >
+          Asia
+        </li>
+        <li
+          class="text-xs hover:scale-105"
+          (click)="filterCountriesByRegion('Europe')"
+        >
+          Europe
+        </li>
+        <li
+          class="text-xs hover:scale-105"
+          (click)="filterCountriesByRegion('Oceania')"
+        >
+          Oceania
+        </li>
       </ul>
+      }
     </div>
     <section
       class="mt-10 w-90vw mx-auto flex flex-col items-center gap-6 md:grid md:grid-cols-2 lg:grid-cols-3 Llaptop:grid-cols-4 2xl:grid-cols-5"
     >
-      @for (country of countries; track $index) {
+      @for (country of filteredCountries; track $index) {
       <div class="h-80 w-90vw md:w-80 lg:w-72 grid grid-rows-2">
         <img
           [src]="country.flags.png"
