refactor(country-single-component): add functionality to display country names rather than codes in single country info.

--- a/src/countries-home/country-single/country-single.component.html
+++ b/src/countries-home/country-single/country-single.component.html
@@ -73,9 +73,9 @@
       <div class="lg:col-span-2 lg:mt-8">
         <p class="font-bold">Border Countries:</p>
         <ul class="flex justify-evenly flex-wrap gap-1">
-          @for (border of country.borders; track $index) {
+          @for (name of borderCountryNames$ | async; track $index) {
           <li class="py-1 px-4 shadow-md text-xs">
-            {{ border }}
+            {{ name }}
           </li>
           }
         </ul>
